# CAPVIC

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: example-prompts-real-answers.md  new-implementation-checklist.md
src/variant_mcp/: __init__.py  constants.py  server.py
src/variant_mcp/classification/: __init__.py  acmg_amp.py  amp_asco_cap.py  oncogenicity_sop.py
src/variant_mcp/clients/: __init__.py  base_client.py  cancer_hotspots_client.py  civic_client.py  clinvar_client.py  gnomad_client.py  litvar_client.py  metakb_client.py  myvariant_client.py  oncokb_client.py  pubmed_client.py  uniprot_client.py
src/variant_mcp/formatters/: __init__.py  reports.py  tables.py
src/variant_mcp/models/: __init__.py  classification.py  evidence.py  inputs.py
src/variant_mcp/queries/: __init__.py  civic_graphql.py
src/variant_mcp/utils/: variant_normalizer.py
tests/: test_classification.py  test_clients.py  test_driver_litvar.py  test_formatters.py  test_models.py  test_phase10.py  test_phase10_clients.py
